--- a/mobile/ios/Podfile
+++ b/mobile/ios/Podfile
@@ -19,6 +19,10 @@ target 'pfa' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
+
   target 'pfaTests' do
     inherit! :complete
     # Pods for testing
