--- a/mobile/ios/pfa/Info.plist
+++ b/mobile/ios/pfa/Info.plist
@@ -35,6 +35,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Nous avons besoin d'utiliser la caméra</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>UILaunchStoryboardName</key>
