--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -24,6 +24,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.8",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "qrcode": "^1.5.0",
+    "stream": "^0.0.2"
   }
 }
