--- a/mobile/android/build.gradle
+++ b/mobile/android/build.gradle
@@ -16,6 +16,7 @@ buildscript {
             // Otherwise we default to the side-by-side NDK version from AGP.
             ndkVersion = "21.4.7075529"
         }
+        // compileOptions {         sourceCompatibility JavaVersion.VERSION_11         targetCompatibility JavaVersion.VERSION_11     }     kotlinOptions {         jvmTarget = '11'     }
     }
     repositories {
         google()
