feature: socket io when mobile order web-app receive command

--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.3.8",
     "nodemon": "^2.0.16",
     "qrcode": "^1.5.0",
+    "socket.io": "^4.5.1",
     "stream": "^0.0.2"
   }
 }
