--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,7 +29,8 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "reduxsauce": "^1.2.1",
-    "seamless-immutable": "^7.1.4"
+    "seamless-immutable": "^7.1.4",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
